; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_config_int.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_get_config_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@seaf = common dso_local global i32 0, align 4
@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_GENERAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Config not exists\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_get_config_int(i8* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32, i32* @TRUE, align 4
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* @seaf, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @seafile_session_config_get_int(i32 %9, i8* %10, i32* %6)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %2
  %15 = load i32**, i32*** %5, align 8
  %16 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %17 = load i32, i32* @SEAF_ERR_GENERAL, align 4
  %18 = call i32 @g_set_error(i32** %15, i32 %16, i32 %17, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %14
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @seafile_session_config_get_int(i32, i8*, i32*) #1

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
